update styles for nav links

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <h1>Codecademy: Website Design System Project</h1>
       <nav>
         <ul class="nav">
-          <li>Colors</li>
-          <li>Typography</li>
-          <li>Buttons</li>
+          <li><a href="#colors">Colors</a></li>
+          <li><a href="#typography">Typography</a></li>
+          <li><a href="#buttons">Buttons</a></li>
         </ul>
       </nav>
     </header>
