adjust styling for nav and swatches; add sections for typography and buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Codecademy: Website Design System Project</h1>
       <nav>
-        <ul class="nav">
+        <ul class="nav-links">
           <li><a href="#colors">Colors</a></li>
           <li><a href="#typography">Typography</a></li>
           <li><a href="#buttons">Buttons</a></li>
@@ -41,6 +41,14 @@
         <li class="green3">#5A9720</li>
         <li class="green4">#385F14</li>
       </ul>
+    </section>
+
+    <section class="typography" id="typography">
+      <h2>Typography</h2>
+    </section>
+
+    <section class="buttons" id="buttons">
+      <h2>Buttons</h2>
     </section>
   </body>
 </html>
